<resources>
    <string name="app_name">LU Stationery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_req">Request</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Login-->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <string name="profile_image">Profile image</string>
    <string name="user_points">10,000 pts</string>

    <string name="cp_title">Stationary Collection</string>
    <string name="current_cp">"Current Collection Point: "</string>
    <string name="collectBtn">Collection List</string>
    <string name="changeCP_btn">Change</string>
    <string name="update_cp">Update Collection Point</string>
    <string name="colletionListBtn">Check Collection List</string>
    <string name="CollectionList">Collection List</string>
    <string name="confirmBtn">Confirm</string>
    <string name="current_dlg">Current Delegate</string>
    <string name="removeDlg">Remove</string>
    <string name="assignDelegate">Assign Delegate</string>
    <string name="details">Details</string>
    <string name="approveBtn">Approve</string>
    <string name="rejectBtn">Reject</string>
    <string name="adjustBtn">Adjust Qty</string>
    <!--Request-->
    <string name="req_title">Requests </string>
    <string name="req_detail_title">Request Detail </string>
    <string name="req_comment">Comment </string>

    <!--Delegate-->
     <string name="empty_delegate">There is no Delegate Person! </string>
    <string name="checkBtn">Check</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_collection">Collection</string>
    <string name="title_activity_delegate">DelegateActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="logout">Logout</string>
    <string name="CollectionHome">Home</string>
    <string name="Home">Home</string>
    <string name="itemlist">Inventory List</string>
    <string name="ReceiveTitel">Delivery List</string>
    <string name="DeliveryDetailTitle">Delivery Confirmation</string>
    <string name="delivery">Delivery Confirmation</string>
    <string name="collectionhinttext">Please select the date below for collection</string>
</resources>