<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/dlg_view"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/app_color_theme_7"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/active_delegate"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dlg_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="15dp"
                android:text="@string/current_dlg"
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dlg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=" "
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dlg_fromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlg_name"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/dlg_to"
                android:text=" "
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dlg_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlg_name"
                android:layout_centerHorizontal="true"
                android:text="TO"
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dlg_toDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlg_name"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/dlg_to"
                android:text=" "
                android:textColor="@color/whiteTextColor"
                android:textSize="20sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/empty_delegate"
            android:visibility="gone">

            <TextView
                android:id="@+id/dlg_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="18dp"
                android:layout_marginEnd="15dp"
                android:text="@string/empty_delegate"
                android:gravity="center"
                android:textColor="@color/whiteTextColor"

                android:textSize="25dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/deleteDelegateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/removeDlg"
        android:background="@color/app_color_theme_2"
        android:textColor="#fff"
        android:layout_margin="10dp"
        android:layout_alignLeft="@id/dlg_view"
        android:layout_alignRight="@id/dlg_view"
        android:layout_below="@id/dlg_view"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/empList_view"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/deleteDelegateBtn"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/assign_dlg_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:text="@string/assignDelegate"
                android:textColor="@color/contentTextColor"
                android:textSize="20sp" />

            <!--            <TextView-->
            <!--                android:id="@+id/textView"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textSize="18sp"-->
            <!--                android:layout_marginTop="60dp"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:textColor="@color/contentTextColor"-->
            <!--                android:text="Start Date: " />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView2"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textSize="18sp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:textColor="@color/contentTextColor"-->
            <!--                android:layout_below="@id/textView"-->
            <!--                android:text="End Date: " />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView3"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textSize="18sp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:textColor="@color/contentTextColor"-->
            <!--                android:layout_below="@id/textView2"-->
            <!--                android:text="Delegate: " />-->

            <EditText
                android:id="@+id/fromDate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="60dp" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/fromDate"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="22dp"
                android:layout_marginBottom="-1dp"
                android:layout_toEndOf="@+id/fromDate"
                android:layout_toRightOf="@+id/fromDate"
                android:text="Select Start Date" />

            <EditText
                android:id="@+id/End_Date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="125dp" />

            <Button
                android:id="@+id/btn_end_date"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/End_Date"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="22dp"
                android:layout_marginBottom="1dp"
                android:layout_toEndOf="@+id/End_Date"
                android:layout_toRightOf="@+id/End_Date"
                android:text="Select End Date" />


            <TextView
                android:id="@+id/tv_select_service_type_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_end_date"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="Select User"
                android:textColor="@color/contentTextColor"
                android:textSize="20sp" /> />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_select_service_type_title"
                android:layout_margin="10dp"
                android:background="@drawable/user_selector"
                android:orientation="vertical">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp" />
            </LinearLayout>


            <!--            <EditText-->
            <!--                android:id="@+id/toDate"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:ems="10"-->
            <!--                android:layout_toRightOf="@id/textView2"-->
            <!--                android:layout_alignTop="@id/textView2"-->
            <!--                android:inputType="date" />-->

            <!--            <Button-->
            <!--                android:id="@+id/pick_dlg"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="30dp"-->
            <!--                android:background="@color/colorDivision"-->
            <!--                android:layout_toRightOf="@id/textView3"-->
            <!--                android:layout_alignTop="@id/textView3"-->
            <!--                android:layout_marginBottom="30dp"-->
            <!--                android:text="Check" />-->

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/empList_view"
        android:layout_alignLeft="@id/empList_view"
        android:layout_alignRight="@id/empList_view"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:background="@color/themeColor"
        android:text="@string/confirmBtn"
        android:textColor="@color/whiteTextColor"
        android:visibility="gone"/>
    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/empList_view"
        android:layout_alignLeft="@id/empList_view"
        android:layout_alignRight="@id/empList_view"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:background="@color/app_color_theme_2"
        android:text="@string/checkBtn"
        android:textColor="@color/whiteTextColor" />

</RelativeLayout>